# uv-mcp

./: .coverage  .dockerignore  .env  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  GEMINI_CLI_QUICKSTART.md  LICENSE  README.md  TROUBLESHOOTING.md  docker-compose.yml  gemini-extension.json  mcp_config_example.json  pyproject.toml  pytest.ini  test_tools.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy-docs.yml  docs-check.yml  test.yml
docs/: README.md  astro.config.mjs  package-lock.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: architecture.md  changelog.md  contributing.md  installation.md  introduction.md  usage.md
docs/src/content/docs/guides/concepts/: mcp-and-extensions.md
docs/src/content/docs/reference/: tools.md
scripts/: check_docs.py
src/uv_agent/: __init__.py  diagnostics.py  server.py
src/uv_mcp/: __init__.py  actions.py  diagnostics.py  errors.py  models.py  project_tools.py  server.py  tools.py  utils.py  uv_utils.py
tests/: __init__.py  test_dependency_inspection.py  test_diagnostics_context.py  test_edge_cases.py  test_new_features.py  test_remove_dependency.py  test_utils_extended.py  test_uv_mcp.py
