[project]
name = "uv-mcp"
version = "0.1.0"
description = "MCP server for uv - environment diagnostics, repair, and dependency management"
authors = [{ name = "Saadman Rafat", email = "saadman@outlook.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
]

[project.scripts]
uv-mcp = "uv_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_mcp"]
