[project]
name = "uv-mcp"
version = "0.6"
description = "Bridge modern, reproducible Python environments with MCP agents. Diagnose, self-heal, and manage uv workflows"
authors = [{ name = "Saadman Rafat", email = "saadman@outlook.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.2.0",
    "pydantic>=2.12.5",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
uv-mcp = "uv_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uv_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
